--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                    Álvaro Hugo García , 
                                    Álvaro García," />
     <meta name="author" content="Álvaro García Céspedes, Notario de Fé Pública No 16 de la ciudad de Cochabamba" />
-    <link rel="canonical" href="https://jolly-pasca-5f44c2.netlify.app/">
+    <link rel="canonical" href="https://alvaro-hugo-garcia-cespedes-1.vercel.app/">
     <link rel="stylesheet" href="style.css">
     <title>Álvaro Hugo García Céspedes </title>
 </head>
